sandbox/output
GildedRose.java:155: error: cannot find symbol
    public static List<Item> updateItemsQualityAndSellIn(List<Item> items) {
                                                         ^
  symbol:   class List
  location: class GildedRose
GildedRose.java:155: error: cannot find symbol
    public static List<Item> updateItemsQualityAndSellIn(List<Item> items) {
                  ^
  symbol:   class List
  location: class GildedRose
2 errors
